--- a/finish/pom.xml
+++ b/finish/pom.xml
@@ -22,18 +22,6 @@ xsi:schemaLocation=
         <liberty.var.default.https.port>9443</liberty.var.default.https.port>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>io.openliberty.features</groupId>
-                <artifactId>features-bom</artifactId>
-                <version>RELEASE</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
         <!-- Provided dependencies -->
         <dependency>
@@ -91,7 +79,6 @@ xsi:schemaLocation=
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.2.3</version>
                 <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
                     <packagingExcludes>pom.xml</packagingExcludes>
                 </configuration>
             </plugin>
@@ -100,43 +87,21 @@ xsi:schemaLocation=
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
-                <executions>
-                    <execution>
-                        <phase>test</phase>
-                        <id>default-test</id>
-                        <configuration>
-                            <excludes>
-                                <exclude>**/it/**</exclude>
-                            </excludes>
-                            <reportsDirectory>
-                                ${project.build.directory}/test-reports/unit
-                            </reportsDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>**/it/**</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
             <!-- Enable liberty-maven plugin -->
             <plugin>
-                <!-- <groupId>net.wasdev.wlp.maven.plugins</groupId>
-                <artifactId>liberty-maven-plugin</artifactId>
-                <version>2.6.1</version> -->
                 <groupId>io.openliberty.tools</groupId>
                 <artifactId>liberty-maven-plugin</artifactId>
                 <version>3.2.1</version>
                 <configuration>
-                    <runtimeArtifact>
-                         <groupId>io.openliberty</groupId>
-                         <artifactId>openliberty-runtime</artifactId>
-                         <version>RELEASE</version>
-                        <type>zip</type>
-                    </runtimeArtifact>
-                    <serverXmlFile>src/main/liberty/config/server.xml</serverXmlFile>
-                    <packageDirectory>${project.build.directory}</packageDirectory>
-                    <packageFile>${app.name}.zip</packageFile>
-                    <packageType>usr</packageType>
                     <bootstrapProperties>
                         <default.http.port>${liberty.var.default.http.port}</default.http.port>
-                        <default.https.port>${liberty.var.default.https.port}</default.https.port>
+                        <default.https.port>${liberty.var.default.http.port}</default.https.port>
                         <app.context.root>${app.name}</app.context.root>
                     </bootstrapProperties>
                 </configuration>
@@ -146,39 +111,16 @@ xsi:schemaLocation=
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.22.2</version>
-                <executions>
-                    <execution>
-                        <phase>integration-test</phase>
-                        <id>integration-test</id>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                        <configuration>
-                            <includes>
-                                <include>**/it/**</include>
-                            </includes>
-                            <systemPropertyVariables>
-                                <liberty.test.port>
-                                    ${liberty.var.default.http.port}
-                                </liberty.test.port>
-                                <war.name>${app.name}</war.name>
-                            </systemPropertyVariables>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>verify-results</id>
-                        <goals>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
-                    <summaryFile>
-                        ${project.build.directory}/test-reports/it/failsafe-summary.xml
-                    </summaryFile>
-                    <reportsDirectory>
-                        ${project.build.directory}/test-reports/it
-                    </reportsDirectory>
+                    <includes>
+                        <include>**/it/**</include>
+                    </includes>
+                    <systemPropertyVariables>
+                        <liberty.test.port>
+                            ${liberty.var.default.http.port}
+                        </liberty.test.port>
+                        <war.name>${app.name}</war.name>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
