--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,19 +4,18 @@
 name: Test application
 
 on:
-  push:
-    branches: [ qa, master ]
   pull_request:
-    branches: [ qa, master ]
+    branches: [ qa ]
+  push:
+    branches: [ qa ]
 
 jobs:
-  build:
-
+  java8build:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: finish
-        
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
@@ -24,5 +23,19 @@ jobs:
       with:
         java-version: 1.8
     - run: unset _JAVA_OPTIONS
-    - name: Build and Test 
-      run: ../scripts/travisTest.sh
+      
+    - name: Run tests
+      run: chmod +x ../scripts/travisTest.sh && sudo ../scripts/travisTest.sh
+      
+    - name: Post tests
+      if: always()
+      run: |
+          logsPath=$(sudo find . -name "console.log");
+          sudo cat $logsPath | sudo grep Launching
+          
+    - name: Archive server logs if failed
+      if: failure()
+      uses: actions/upload-artifact@v2
+      with:
+        name: server-logs
+        path: finish/target/liberty/wlp/usr/servers/guideServer/logs/
