--- a/start/pom.xml
+++ b/start/pom.xml
@@ -16,13 +16,13 @@ xsi:schemaLocation=
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <app.name>LibertyProject</app.name>
         <!-- Liberty configuration -->
         <liberty.var.default.http.port>9080</liberty.var.default.http.port>
         <liberty.var.default.https.port>9443</liberty.var.default.https.port>
     </properties>
 
     <dependencies>
+    
         <!-- Provided dependencies -->
         <dependency>
             <groupId>jakarta.platform</groupId>
@@ -37,6 +37,7 @@ xsi:schemaLocation=
             <type>pom</type>
             <scope>provided</scope>
         </dependency>
+
         <!-- For tests -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -78,6 +79,7 @@ xsi:schemaLocation=
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.2.3</version>
             </plugin>
+
             <!-- Plugin to run unit tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -89,19 +91,20 @@ xsi:schemaLocation=
                     </excludes>
                 </configuration>
             </plugin>
+
             <!-- Enable liberty-maven plugin -->
             <plugin>
                 <groupId>io.openliberty.tools</groupId>
                 <artifactId>liberty-maven-plugin</artifactId>
-                <version>3.2.2-SNAPSHOT</version>
+                <version>3.3-M4</version>
                 <configuration>
                     <bootstrapProperties>
                         <default.http.port>${liberty.var.default.http.port}</default.http.port>
                         <default.https.port>${liberty.var.default.http.port}</default.https.port>
-                        <app.context.root>${app.name}</app.context.root>
                     </bootstrapProperties>
                 </configuration>
             </plugin>
+
             <!-- Plugin to run functional tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -115,7 +118,6 @@ xsi:schemaLocation=
                         <liberty.test.port>
                             ${liberty.var.default.http.port}
                         </liberty.test.port>
-                        <war.name>${app.name}</war.name>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
