--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,9 +7,7 @@ name: Test application
 on:
   pull_request:
     branches: [ qa ]
-  push:
-    branches: [ qa ]
-
+    
 jobs:
   java8build:
     runs-on: ubuntu-latest
@@ -24,19 +22,9 @@ jobs:
       with:
         java-version: 1.8
     - run: unset _JAVA_OPTIONS
-      
+  
     - name: Run tests
       run: chmod +x ../scripts/travisTest.sh && sudo ../scripts/travisTest.sh
-      
     - name: Post tests
       if: always()
-      run: |
-          logsPath=$(sudo find . -name "console.log");
-          sudo cat $logsPath | sudo grep Launching
-          
-    - name: Archive server logs if failed
-      if: failure()
-      uses: actions/upload-artifact@v2
-      with:
-        name: server-logs
-        path: finish/target/liberty/wlp/usr/servers/guideServer/logs/
+      run: docker images
