--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,3 @@
-# This workflow will test the guide application.
-# For more information about building and testing Java,
-# see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Test application
 
 on:
@@ -9,22 +5,23 @@ on:
     branches: [ qa ]
     
 jobs:
-  java8build:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        jdk: [ 8 ]
     defaults:
       run:
         working-directory: finish
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: ${{ matrix.jdk }}
     - run: unset _JAVA_OPTIONS
-  
     - name: Run tests
-      run: chmod +x ../scripts/travisTest.sh && sudo ../scripts/travisTest.sh
+      run: sudo ../scripts/testApp.sh
     - name: Post tests
       if: always()
       run: docker images
