--- a/finish/Dockerfile
+++ b/finish/Dockerfile
@@ -28,7 +28,7 @@ USER root
 # end::user-root[]
 
 # tag::copy[]
-COPY --chown=1001:0 src/main/liberty/config/ /config/
+COPY --chown=1001:0 src/main/liberty/config/server.xml /config/
 COPY --chown=1001:0 target/*.war /config/apps/
 # end::copy[]
 # tag::user[]
