--- a/finish/Dockerfile
+++ b/finish/Dockerfile
@@ -3,21 +3,34 @@
 FROM openliberty/open-liberty:kernel-java8-openj9-ubi
 # end::from[]
 
+ARG VERSION=1.0
+ARG REVISION=SNAPSHOT
+# tag::label[]
+
+LABEL \
+  org.opencontainers.image.authors="Your Name" \
+  org.opencontainers.image.vendor="IBM" \
+  org.opencontainers.image.url="local" \
+  org.opencontainers.image.source="https://github.com/OpenLiberty/guide-docker" \
+  org.opencontainers.image.version="$VERSION" \
+  org.opencontainers.image.revision="$REVISION" \
+  vendor="Open Liberty" \
+  name="system" \
+  version="$VERSION-$REVISION" \
+  summary="The system microservice from the Docker Guide" \
+  # tag::description[]
+  description="This image contains the system microservice running with the Open Liberty runtime."
+  # end::description[]
+# end::label[]
+
 # tag::user-root[]
 USER root
 # end::user-root[]
-# Symlink servers directory for easier mounts.
-# tag::link[]
-RUN ln -s /opt/ol/wlp/usr/servers /servers
-# end::link[]
+
+# tag::copy[]
+COPY --chown=1001:0 src/main/liberty/config/server.xml /config/
+COPY --chown=1001:0 target/*.war /config/apps/
+# end::copy[]
 # tag::user[]
 USER 1001
 # end::user[]
-
-# Run the server script and start the defaultServer by default.
-# tag::entrypoint[]
-ENTRYPOINT ["/opt/ol/wlp/bin/server", "run"]
-# end::entrypoint[]
-# tag::default-start[]
-CMD ["defaultServer"]
-# end::default-start[]
