--- a/finish/Dockerfile
+++ b/finish/Dockerfile
@@ -1,6 +1,6 @@
 # Start with OL runtime.
 # tag::from[]
-FROM openliberty/open-liberty:full-java11-openj9-ubi
+FROM openliberty/open-liberty:kernel-java8-openj9-ubi
 # end::from[]
 
 ARG VERSION=1.0
