--- a/finish/Dockerfile
+++ b/finish/Dockerfile
@@ -1,6 +1,6 @@
 # Start with OL runtime.
 # tag::from[]
-FROM icr.io/appcafe/open-liberty:full-java11-openj9-ubi
+FROM icr.io/appcafe/open-liberty:kernel-slim-java11-openj9-ubi
 # end::from[]
 
 ARG VERSION=1.0
@@ -29,8 +29,10 @@ USER root
 
 # tag::copy[]
 COPY --chown=1001:0 src/main/liberty/config/server.xml /config/
+RUN features.sh
 COPY --chown=1001:0 target/*.war /config/apps/
 # end::copy[]
+RUN configure.sh
 # tag::user[]
 USER 1001
 # end::user[]
